# greentic-dw-authoring

./: .gitignore  Cargo.toml
docs/superpowers/plans/: 2026-07-07-flow-tool-author-contract-slice-b-dwauthoring.md
src/: assemble.rs  cbor_flow_post.rs  inject.rs  lib.rs  loadable.rs  model.rs  project.rs  slug.rs  validate.rs
tests/: assemble.rs  model.rs  project.rs  validate.rs
