[package]
name = "greentic-dw-authoring"
version = "0.1.0"
edition = "2021"
rust-version = "1.95.0"
description = "Author agentic-worker packs (single_turn / agent_graph / deep_worker) from a WorkerSpec"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2"
schemars = "0.8"
anyhow = "1"
thiserror = "2"
blake3 = "1"
time = { version = "0.3", features = ["formatting"] }
semver = "1"
greentic-types = "=1.2.0-research.1"
greentic-pack-lib = "=1.2.0-research.0"
greentic-flow = "=1.2.0-research.0"
greentic-extension-sdk-contract = "=1.2.19-research"
greentic-aw-runtime = { git = "https://github.com/greenticai/greentic-runner", rev = "953d2369dd0ee059e27a306be7d04de85435a0d5", features = ["test-mock"] }
zip = "2"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
greentic-mcp-exec = { git = "https://github.com/greenticai/greentic-mcp.git", rev = "f0d2f02b002b49612ce25a6af1901a5280757605" }
greentic-extension-sdk-contract = { git = "https://github.com/greenticai/greentic-designer-sdk.git", tag = "v1.2.19-research" }
greentic-extension-sdk-state = { git = "https://github.com/greenticai/greentic-designer-sdk.git", tag = "v1.2.17-research" }
greentic-i18n-cards = { git = "https://github.com/greenticai/greentic-i18n.git", rev = "1eb3569416830b146758ca873a409e1513c0939b" }
