[package]
name = "greentic-dw-authoring"
version = "0.1.1"
edition = "2021"
rust-version = "1.95.0"
description = "Author agentic-worker packs (single_turn / agent_graph / deep_worker) from a WorkerSpec"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2"
schemars = "0.8"
anyhow = "1"
thiserror = "2"
blake3 = "1"
time = { version = "0.3", features = ["formatting"] }
semver = "1"
greentic-types = "=1.3.0-research.1"
greentic-pack-lib = "=1.3.0-research.2"
greentic-flow = "=1.3.0-research.1"
greentic-extension-sdk-contract = "=1.3.0-research.1"
greentic-aw-runtime = { git = "https://github.com/greenticai/greentic-runner", rev = "88c1d1723ea8ec0a7ee759f4f6e1a17433534b07", features = ["test-mock"] }
zip = "2"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
greentic-mcp-exec = { git = "https://github.com/greenticai/greentic-mcp.git", rev = "a4ad9e4ef8f6a6ff0496e2d3dfa2de9e35f84adc" }
greentic-extension-sdk-contract = { git = "https://github.com/greenticai/greentic-designer-sdk.git", tag = "v1.3.0-research.1" }
# greentic-ext-runtime now reuses sdk-registry's TOFU publisher-key store, so
# -registry joins the graph transitively. It is not on crates.io, so it needs
# the same tag redirect -contract and -state already had. Keep all three on ONE
# tag: they are `=`-pinned to each other, so a split resolves two instances.
greentic-extension-sdk-registry = { git = "https://github.com/greenticai/greentic-designer-sdk.git", tag = "v1.3.0-research.1" }
greentic-extension-sdk-state = { git = "https://github.com/greenticai/greentic-designer-sdk.git", tag = "v1.3.0-research.1" }
greentic-i18n-cards = { git = "https://github.com/greenticai/greentic-i18n.git", rev = "1eb3569416830b146758ca873a409e1513c0939b" }

